--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 
     </head>
     <body>
-      <b>index</b>
-      <script src="bundle.js"></script>
+      <div id="vue-anchor"></div>
+      <script src="bundle.js">
+      </script>
     </body>
 </html>
