--- a/client-dist/index.html
+++ b/client-dist/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
       <div id="vue-anchor"></div>
-      <script src="bundle.js">
+      <script src="prod-bundle.js">
       </script>
     </body>
 </html>
